[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
nom = "7.1.3"
num = "0.4.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "advent_benchmark"
harness = false
